fix z-index

--- a/styles/PostList.module.scss
+++ b/styles/PostList.module.scss
@@ -246,7 +246,7 @@
 
     &__add__event {
       position: fixed;
-      z-index: 10;
+      z-index: 4;
       top:  80vh;
       width: $width-mobile;
 
